# AMTracker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/74hc595/: 74hc595.c  74hc595.h  CMakeLists.txt
components/Csv_reader/: CMakeLists.txt
components/csv_reader/: CMakeLists.txt
components/html_parser/: CMakeLists.txt
components/led_matrix/: CMakeLists.txt  led_matrix.c  led_matrix.h
components/my_string/: CMakeLists.txt  my_string.c
components/my_string/include/: my_string.h
components/my_wifi/: CMakeLists.txt  my_wifi.c  my_wifi.h
components/ntp_client/: CMakeLists.txt  ntp_client.c  ntp_client.h
components/schedule/: CMakeLists.txt  schedule.c  schedule.h
components/sn74hc595/: CMakeLists.txt  sn74hc595.c  sn74hc595.h
components/train/: CMakeLists.txt  train.c  train.h
data/: schedules.py  stop_times.txt  timetable.py
main/: CMakeLists.txt  main.c  my_err.c  my_wifi.c  schedule.c  train.c  web_interface.c  web_ui.c
main/html/: bye.html  error.html  exit.html  index.html  new_sta.html
main/include/: my_err.h  my_wifi.h  schedule.h  train.h  web_interface.h  web_ui.h
spiffs_root/: stop_fixed.csv  stop_times_fixed.csv
